# alpharing

./: .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml  run_alpharing.py
.github/workflows/: github_actions.yml
alpharing/: alpharing_classifier_pkg.pkl  run_alpharing.py
data/benchmark_input/: NM_000018.4_ACADVL.fa  NM_000018.4_ACADVL_Arg23Gln_Benign.fa  NM_000018.4_ACADVL_Arg459Gln_Pathogenic.fa  NM_000018.4_ACADVL_Gly43Asp_Benign.fa  NM_000018.4_ACADVL_Gly441Asp_Pathogenic.fa  NM_000018.4_ACADVL_Leu17Phe_Benign.fa  NM_000018.4_ACADVL_Pro65Leu_Benign.fa  NM_000018.4_ACADVL_Val283Ala_Pathogenic.fa  NM_000020.3_ACVRL1.fa  NM_000020.3_ACVRL1_Arg411Gln_Pathogenic.fa  NM_000020.3_ACVRL1_Glu236Lys_Pathogenic.fa  NM_000020.3_ACVRL1_Ser333Ile_Pathogenic.fa  NM_000022.2_ADA.fa  NM_000022.2_ADA_Asp8Asn_Benign.fa  NM_000022.4_ADA.fa  NM_000022.4_ADA_Ala329Val_Pathogenic.fa  NM_000022.4_ADA_Arg142Gln_Benign.fa  NM_000022.4_ADA_Arg211His_Pathogenic.fa  NM_000022.4_ADA_Arg282Gln_Pathogenic.fa  NM_000022.4_ADA_Gly216Arg_Pathogenic.fa  NM_000022.4_ADA_Lys80Arg_Benign.fa  NM_000132.4_F8.fa  NM_000132.4_F8_Arg1768His_Pathogenic.fa  NM_000132.4_F8_Arg1800His_Pathogenic.fa  NM_000132.4_F8_Arg2016Trp_Pathogenic.fa  NM_000132.4_F8_Arg458Cys_Pathogenic.fa  NM_000132.4_F8_Arg503His_Benign.fa  NM_000132.4_F8_Arg550His_Pathogenic.fa  NM_000132.4_F8_Arg612Cys_Pathogenic.fa  NM_000132.4_F8_Asn1941Ser_Pathogenic.fa  NM_000132.4_F8_Glu200Gly_Pathogenic.fa  NM_000132.4_F8_Glu739Lys_Pathogenic.fa  (+1454 more)
scripts/: create_benchmark_input.py
tests/: test_run_alpharing.py
(+7 files in other folders)
